# BreakoutOpenGL

./: .gitignore  CMakeLists.txt  README.md
includes/: filesystem.h  stb_image.h
includes/glad/: glad.h
libs/: assimp-vc143-mtd.exp
src/: Application.cpp  Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
